# DocumentationTemplate

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  dir_d44c64559bbebec7f509842c48db8b23.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
.github/workflows/: docs.yml
_sources/: index.rst.txt
api/: cpp_doxygen_sphinx.html  index.html
docs_doxy/: Doxyfile.in
docs_sphinx/: Doxyfile.in  conf.py
docs_sphinx/_build/doctrees/: environment.pickle  index.doctree
docs_sphinx/_build/doctrees/api/: cpp_doxygen_sphinx.doctree  index.doctree
docs_sphinx/_build/html/: .buildinfo  CatCutifier_8hpp_source.html  annotated.html  classFoo-members.html  classFoo.html  classes.html  files.html  genindex.html  index.html  search.html  searchindex.js
docs_sphinx/_build/html/_sources/api/: cpp_doxygen_sphinx.rst.txt
docs_sphinx/_build/html/api/: index.html
docs_sphinx/_build/latex/: classFoo.tex  refman.tex
docs_sphinx/_build/xml/: CatCutifier_8hpp.xml  classFoo.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  index.xml
include/: CatCutifier.hpp
src/: CatCutifier.cpp
